samples/_failures_safe/1761636487_23a548_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a9139d6.c: In function ‘main’:
./samples/SAFE/__tmp_1a9139d6.c:162:13: error: expected expression at end of input
  162 |             case
      |             ^~~~
./samples/SAFE/__tmp_1a9139d6.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a9139d6.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a9139d6.c:162:13: error: expected declaration or statement at end of input
